fix: loader not showing

--- a/style.scss
+++ b/style.scss
@@ -39,7 +39,7 @@ body {
 
 // loader styles
 .loader {
-  display: none;
+  // display: none;
   position: absolute;
   top: 0;
   left: 0;
